ghc-4335c07/testsuite/tests/typecheck/should_fail/T9033.hs
module T9030 where

bad :: Bool
bad = ()

square :: Integral i => i -> i
square x = x^2
